[package]
name = "ckb-transaction-cobuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = "0.3.1"
ckb-std = { version = "0.15.3" }
molecule = { version = "0.7.5", default-features = false }
ckb-gen-types = { version = "0.116.1", default-features = false }
