[package]
name = "ckb-transaction-cobuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = "0.3.1"
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std" }
molecule = { version = "0.8.0", default-features = false }
ckb-gen-types = { version = "0.118.0", default-features = false }
